--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
   postgresql:
     image: postgres:12
     volumes:
-      # Use docker rm if need to re-create
+      # To re-create base use
+      # docker ps -a
+      # docker rm <NAME>
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=cinema
@@ -66,8 +68,12 @@ services:
       - test_network
     depends_on:
       - hall
+      - session
+      - ticket
     links:
       - hall
+      - session
+      - ticket
 
 networks:
   test_network:
