--- a/public/src/main/resources/application.conf
+++ b/public/src/main/resources/application.conf
@@ -12,3 +12,19 @@ hall {
     host = ${?HALLHOST}
     port = ${?HALLPORT}
 }
+
+session {
+    host = "127.0.0.1"
+    port = 8080
+    # To override at docker-compose
+    host = ${?SESSIONHOST}
+    port = ${?SESSIONPORT}
+}
+
+ticket {
+    host = "127.0.0.1"
+    port = 8080
+    # To override at docker-compose
+    host = ${?TICKETHOST}
+    port = ${?TICKETPORT}
+}
