--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     apply plugin: 'java'
     apply plugin: 'kotlin'
     apply plugin: 'com.github.johnrengelman.shadow'
+    apply plugin: 'jacoco'
 
     sourceCompatibility = 1.8
     compileKotlin {
