--- a/public/build.gradle
+++ b/public/build.gradle
@@ -17,3 +17,11 @@ jar {
 
 shadowJar {
 }
+
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
