--- a/ticket/build.gradle
+++ b/ticket/build.gradle
@@ -16,3 +16,11 @@ jar {
 
 shadowJar {
 }
+
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
