--- a/public/build.gradle
+++ b/public/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation "io.ktor:ktor-client-gson:$ktor_version"
     testImplementation "io.ktor:ktor-server-test-host:$ktor_version"
     testImplementation "io.ktor:ktor-client-mock:$ktor_version"
+    testImplementation "io.mockk:mockk:1.10.0"
 }
 
 jar {
