xml reports for codecov

--- a/session/build.gradle
+++ b/session/build.gradle
@@ -23,4 +23,9 @@ test {
 
 jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled false
+    }
 }
