--- a/hall/build.gradle
+++ b/hall/build.gradle
@@ -23,6 +23,11 @@ test {
 
 jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled false
+    }
 }
 
 
